# schemata

./: Cargo.toml  README.md
.github/workflows/: build-release.yml  ci.yml  release.yml  rust-version.yml
src/: cli.rs  input.rs  main.rs  registry.rs  stats.rs  traversal.rs
src/schema/: avro.rs  json_report.rs  mod.rs
